navigation menu wearable integration

--- a/Sitter/res/values/dimens.xml
+++ b/Sitter/res/values/dimens.xml
@@ -1,7 +1,13 @@
-<resources>
-
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <dimen name="nav_menu_margin_top">12dp</dimen>
+    <dimen name="nav_menu_margin_left">16dp</dimen>
+    <dimen name="action_bar_font_size">16sp</dimen>
+    <dimen name="action_bar_image_size">20dp</dimen>
+    <dimen name="action_bar_title_font_size">22sp</dimen>  
+    <dimen name="action_bar_margin">15dp</dimen> 
+    <dimen name="menu_item_image_size">42dp</dimen>
+    <dimen name="menu_item_side_margin">10dp</dimen>
+    <dimen name="menu_item_margin">10dp</dimen>
+    <dimen name="menu_text_size">25sp</dimen>
 </resources>
