--- a/Sitter/res/values/colors.xml
+++ b/Sitter/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <color name="blackopactity">#BF333333</color>
     <color name="white">#fff</color>
     <color name="grey">#4d4d4d</color>
-    <color name="blue">#002f67</color>
     <color name="lightblue">#5facfa</color>
     <color name="text">#333333</color>
     <color name="greyBackground">#f7f7f7</color>
-    <color name="orange">#ffa800</color>
+    <color name="green">#FF99CC00</color>
+    <color name="blue">#FF33B5E5</color>
+    <color name="purple">#FFAA66CC</color>
+    <color name="red">#FFFF4444</color>
+    <color name="orange">#FFFFBB33</color>
+
 </resources>
