--- a/Sitter/res/values/dimens.xml
+++ b/Sitter/res/values/dimens.xml
@@ -10,4 +10,9 @@
     <dimen name="menu_item_side_margin">10dp</dimen>
     <dimen name="menu_item_margin">10dp</dimen>
     <dimen name="menu_text_size">25sp</dimen>
+      
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="menu_item_height">40dp</dimen>
 </resources>
