--- a/Sitter/res/layout/activity_main.xml
+++ b/Sitter/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
     tools:context="com.solstice.sitter.MainActivity" >
 
     <TextView
+        android:id="@+id/label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
